# ScaffoldTask

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  prompt.txt
backend/: Dockerfile
backend/api/: Cargo.toml
backend/api/benches/: engine_bench.rs
backend/api/src/: config.rs  engine.rs  handlers.rs  lib.rs  main.rs  router.rs  seed.rs  state.rs
backend/api/src/repo/: memory.rs  mod.rs  postgres.rs
backend/api/src/services/: ai.rs  anki.rs  aws.rs  ingest.rs  mod.rs  telemetry.rs
backend/api/tests/: e2e.rs
backend/core/: Cargo.toml
backend/core/src/: fsrs.rs  lib.rs  models.rs  nplus1.rs
backend/migrations/: 0001_init.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  types.ts
frontend/src/components/: ActivityGraph.test.tsx  ActivityGraph.tsx  FlashCard.test.tsx  FlashCard.tsx  ProfileSwitcher.test.tsx  ProfileSwitcher.tsx  RecommendationList.tsx  StatsPanel.tsx
telemetry/sample-logs/: grafana-metrics.prom  posthog-events.jsonl  sentry-events.json
