[package]
name = "scaffold-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "scaffold-api"
path = "src/main.rs"

[dependencies]
scaffold-core = { path = "../core" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "engine_bench"
harness = false
